# evals

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
python/: main.py  pyproject.toml  result_generator.py
python/evals/: auth_login.py  file_upload.py
results/File Upload Evaluation/: gpt-41-mini_20251010_005345.txt  smart_20251010_005700.txt
src/: server.ts
src/routes/: authApply.ts  fileUpload.ts  health.ts
