[project]
name = "stapply-evals-python"
version = "0.1.0"
description = "Auxiliary Python tooling for the stapply-ai/evals project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Stapply" }
]
dependencies = [
    "browser-use>=0.7.10",
    "kernel>=0.12.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

