[project]
name = "stapply-evals-python"
version = "0.1.0"
description = "Auxiliary Python tooling for the stapply-ai/evals project"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
  { name = "Stapply" }
]
dependencies = [
    "browser-use>=0.7.10",
    "kernel>=0.12.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.0b1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include standalone Python scripts since there is no package directory
include = ["*.py"]

